--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <h1 class="azul">Template</h1>
-  <p>Alteração 1<br>Alt2</p>
+  <p>Alteração 1<br> &nbsp;&nbsp;&nbsp;&nbsp; Alt2</p>
 </body>
 
 </html>
