--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
   <h1 class="azul">Template</h1>
-  <p>Alteração 1<br> &nbsp;&nbsp;&nbsp; <b>negrito</b></p>
+  <p>Alteração 1<br> &nbsp;&nbsp;&nbsp; <b>negrito</b> <i>Itálico</i><br>3<sup>2</sup><br><abbr title="Hypertext Markup Language" style="color:darkslateblue">HTML</abbr><br><span style="color:deeppink">SPAN</p>
+
+  <!--comentário-->
 </body>
 
 </html>
