--- a/index.html
+++ b/index.html
@@ -7,11 +7,34 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Template</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    p {
+      color:darkolivegreen;
+    }
+    strong {
+      cursor: pointer;
+    }
+    em {
+      color:darkslateblue;
+      cursor: text;
+    }
+  </style>
 </head>
 
 <body>
-  <h1 class="azul">Template</h1>
-  <p>Alteração 1<br> &nbsp;&nbsp;&nbsp; <b>negrito</b> <i>Itálico</i><br>3<sup>2</sup><br><abbr title="Hypertext Markup Language" style="color:darkslateblue">HTML</abbr><br><span style="color:deeppink">SPAN</p>
+  <h1 class="azul"><b>Lorem Ipsum</b></h1>
+  <h2></h2>
+
+  <p>Aos trinta anos apartou-se <strong>Zaratustra</strong> da sua pátria e do lago da sua pátria.</p>
+
+  <p>Fiz uma <i>promessa</i> pra mim mesmo,<br> Nunca mais comer torresmo.</p>
+
+  <p>E então o homem de pele albina e túnica negra como o céu notuno profere:<br>
+    <em>Que poder teria o inferno se os lá presos não pudessem sonhar com o paraíso?</em></p>
+
+  <p>I<sup>I</sup> = ?<br><abbr title="Hypertext Markup Language" style="color:deepskyblue">HTML</abbr><br><span style="color:deeppink">SPAN</p>
+
+    <backquote><sub>"</sub>lorem ipsum dolor sit amet consectetur adipiscing elit<sub>"</sub></backquote>
 
   <!--comentário-->
 </body>
