--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="icon.png">
 </head>
 
-<body>
+<body class="central">
 <span id="top"></span>
 
 <h1>Listas e afins de HTML</h1>
@@ -36,17 +36,22 @@
     <li>The Ghost in the Shell (mangá)</li>
   </ul>
 
- <h2 id="rpg">Personagens de RPG</h2>
+ <h2 id="rpg">Alguns personagens de RPG meus</h2>
  <ul>
    <li>
  <dl>
-  <dt><a href="tonico.png" target="_blank">Tonico Balthazar </a></dt>
-    <dd>Gnomo mago religioso, é alcólatra e tem seu rosto transformado em madeira devido a uma maldição.</dd>
+  <dt><a href="tonico.png" target="_blank">Tonico Balthazar (cenário medieval mágico) </a></dt>
+    <dd>Gnomo mago religioso, é alcólatra e tem seu rosto transformado em madeira devido a uma maldição, se torna comandante de tropas, e após a morte de seu patrão em um assassínio de reis em massa, envolve-se.</dd>
   </li>
   <li>
-  <dt><a href="trevor.png" target="_blank">Trevor Schulz (DieselPunk)</a></dt>
+  <dt><a href="trevor.png" target="_blank">Trevor Schulz (cenário dieselpunk)</a></dt>
   <dd>Paramédico na WW2, é um judeu que fugira do regime nazista e se une a um grupo terrorista para derrubar ditaduras.</dd>
   </li>
+  <li>
+    <dt><a href="charles.png" target="_blank">Charles Cardeirelle (cenário rev. industrial mágico)</a></dt>
+    <dd>Um tiefling investigador, chamado para um caso de morte de mineradores o qual mais ninguém se importava, ele e o grupo começam a descobrir a conspiração por trás.</dd>
+   </li>
+
 </ul>
 
 
