--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,8 @@
 
 <body class="central">
 <span id="top"></span>
-
+<br>
+<img src="silverflame.png" alt="Lorem Ipsum" >
 <h1>Listas e afins de HTML</h1>
 <ul> <!--aninhamento de lista-->
 
