--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
 <ul> <!--aninhamento de lista-->
 
 <nav id="menu">
-
+<ul>
   <li> <a href="index2.html">Home<a></li>
   <li><a href=#obras>Obras recomendadas</a></li>
   <li><a href=#rpg>Personagens de RPG</a></li>
@@ -35,6 +35,11 @@
     <li>Pluto (mangá)</li>
     <li>Persépolis (graphic novel)</li>
     <li>The Ghost in the Shell (mangá)</li>
+    <li>Axiom Verge (jogo)</li>
+    <li>Cavestory (jogo)</li>
+    <li>Transistor (jogo)</li>
+    <li>Child Of Light (jogo)</li>
+    <li>Dead Space (jogo)</li>
   </ul>
 
  <h2 id="rpg">Alguns personagens de RPG meus</h2>
@@ -42,22 +47,21 @@
    <li>
  <dl>
   <dt><a href="tonico.png" target="_blank">Tonico Balthazar (cenário medieval mágico) </a></dt>
-    <dd>Gnomo mago religioso, é alcólatra e tem seu rosto transformado em madeira devido a uma maldição, se torna comandante de tropas, e após a morte de seu patrão em um assassínio de reis em massa, envolve-se.</dd>
+    <dd class="rpgchar">Gnomo mago religioso, é alcólatra e tem seu rosto transformado em madeira devido a uma maldição, se torna comandante de tropas, e após a morte de seu patrão em um assassínio de reis em massa, envolve-se.</dd>
   </li>
   <li>
   <dt><a href="trevor.png" target="_blank">Trevor Schulz (cenário dieselpunk)</a></dt>
-  <dd>Paramédico na WW2, é um judeu que fugira do regime nazista e se une a um grupo terrorista para derrubar ditaduras.</dd>
+  <dd class="rpgchar">Paramédico na WW2, é um judeu que fugira do regime nazista e se une a um grupo terrorista para derrubar ditaduras.</dd>
   </li>
   <li>
     <dt><a href="charles.png" target="_blank">Charles Cardeirelle (cenário rev. industrial mágico)</a></dt>
-    <dd>Um tiefling investigador, chamado para um caso de morte de mineradores o qual mais ninguém se importava, ele e o grupo começam a descobrir a conspiração por trás.</dd>
+    <dd class="rpgchar">Um tiefling investigador, chamado para um caso de morte de mineradores o qual mais ninguém se importava, ele e o grupo começam a descobrir a conspiração por trás.</dd>
    </li>
 
 </ul>
 
-
 <a href="tel:40028922">Número do Rei do Ducado de Banãnia</a> <br><br>
-<a href="#top"; style="font-weight: bold; color: maroon;">Voltar ao início</a>
+<a href="#top"; style="font-weight: bold; color: gray ;">Voltar ao início</a> <br><br>
 </body>
 
 </html>
