--- a/index3.html
+++ b/index3.html
@@ -51,7 +51,7 @@
 
 </div>
 <br>
-<a href="#" class="t" style="text-align:center">Voltar ao Topo</a>
+<a href="#" class="t" style="text-align:center">Voltar ao Início</a>
 </body>
 
 </html>
