--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 
 <nav id="menu">
 <ul>
-  <li> <a href="index2.html">Home<a></li>
+  <li> <a href="summary.html">Home<a></li>
   <li><a href=#obras>Obras recomendadas</a></li>
   <li><a href=#rpg>Personagens de RPG</a></li>
 </ul>
