--- a/index3.html
+++ b/index3.html
@@ -14,11 +14,11 @@
 
   <h1 class="t">Teste de mídia geral</h1>
 
-<nav>
+<nav style="text-align: center">
   <ul>
-    <li> <a href="summary.html"></a>Home<a></li>
+    <li> <a href="summary.html">Home</a></li>
     <li><a href=#videos>Vídeos</a></li>
-    <li><a href=#rpgparty>Ilustrações</a></li>
+    <li><a href=#rpgparty>Ilustrações minhas</a></li>
   </ul>
 </nav>
 
@@ -41,7 +41,7 @@
 
   <figure>
     <img src="diesel.png" alt="Dieselpunk">
-    <figcaption>Grupo da campanha Dieselpunk</figcaption>
+    <figcaption>Grupo da campanha Dieselpunk (Trevor ae)</figcaption>
   </figure>
 
   <figure>
