--- a/index4.html
+++ b/index4.html
@@ -65,6 +65,25 @@
 <label for="obras"></label>
 </form>
 
+<table>
+  <thead>
+  <th>Top 3 Cachorros</th>
+  <th>Top 3 Macacos</th>
+  <th>Top 3 Armas</th>
+</thead>
+
+<tbody>
+  <tr>
+    <td>Pincher</td><td>Sagui Pigmeu</td><td>Peixeira</td>
+  </tr>
+  <tr>
+  <td>Doberman</td><td>Macaco-Prego</td><td>Minigun</td>
+  </tr>
+  <tr>
+  <td>Border Collie</td><td>Homo Sapiens</td><td>Shotgun c/ Mira</td>
+  </tr>
+</tbody>
+</table>
   <br>
   <a href="#" class="t" style="text-align:center">Voltar ao Início</a>
   <br>
