--- a/index4.html
+++ b/index4.html
@@ -33,7 +33,7 @@
 
 <br><h3 class="align">RPG</h2>
 
-<form style=";max-width: 50%;margin: auto;" class="hor">
+<form style="max-width: 50%;margin: auto;" class="hor">
   <fieldset>
     <legend class="align">Já jogou rpg de mesa?</legend>
 
