--- a/index5.html
+++ b/index5.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Template</title>
-  <link rel="stylesheet" href="style3.css">
+  <link rel="stylesheet" href="base.css">
   <link rel="icon" href="icon.png">
 </head>
 
