--- a/index6.html
+++ b/index6.html
@@ -19,7 +19,6 @@
 
 
     </ul>
-    <h3><a href="summary.html">Teste 1</a></h3>
   </nav>
 
 <header id="header">
@@ -40,6 +39,21 @@
   right: 30px">
   Absolute
   </div>
+
+  <div class="robohash">
+  <spam class="card"><img src="https://robohash.org/0831">
+    <p>Funcionário 0831</p>
+  </spam>
+  <spam class="card"><img src="https://robohash.org/2374">
+    <p>Funcionário 2374</p>
+  </spam>
+  <spam class="card"><img src="https://robohash.org/4578">
+    <p>Funcionário 4578</p>
+  </spam>
+  <spam class="card"><img src="https://robohash.org/6504">
+    <p>Funcionário 6504</p>
+  </spam></div>
+
 </section>
 
 <aside id="aside">
