--- a/index6.html
+++ b/index6.html
@@ -21,7 +21,7 @@
     </ul>
   </nav>
 
-<header id="header">
+<header id="header" class="align, center">
   <div>
     <button>Join</button>
     <button>Login</button>
