--- a/6 - about .html
+++ b/6 - about .html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="central, align">
-  <br>
+  <br>adssd
   <h1 class="align">INDEX6</h1>
   <nav style="text-align: center; display: inline;">
     <ul class="menu">
@@ -23,6 +23,7 @@
 
 <header id="header" class="align, center">
   <div>
+    <h1>Cabeçalho Foda</h1>
     <button>Join</button>
     <button>Login</button>
     <button>Contato</button>
