--- a/Robostuff  - home.html
+++ b/Robostuff  - home.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Testede Layout</title>
-  <link rel="stylesheet" href="6.css">
+  <link rel="stylesheet" href="Robostuff.css">
   <link rel="icon" href="icon.png">
 </head>
 
 <body>
   <div class="header">
     <h1>Header</h1>
-    <nav><a>Home</a>
-      <a>About</a>
+    <nav><a href="Robostuff - home.html">Home</a>
+      <a href="Robostuff - about.html">About</a>
       <a>Products</a>
       <a>Contact</a>
     </nav>
