--- a/5e - home.html
+++ b/5e - home.html
@@ -1,3 +1,4 @@
+<!-- Tenho que dizer que falhei por completo em posicionamento, resolvi deixar esse estidp pra quando tempo for livre -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 
