--- a/5e - home.html
+++ b/5e - home.html
@@ -89,38 +89,38 @@
         <div class="box2">
           <h3>Porrada</h3>
 
-          <label for="class"><img src=""><input type="radio" id="Fighter" name="class" value="Bike">Fighter</label><br>
+          <label for="class"><img src="dndicons/fighter.jpg"><input type="radio" id="Fighter" name="class" value="Bike">Fighter</label><br>
 
-          <label for="class"><img src=""><input type="radio" id="Barbarian" name="race"
+          <label for="class"><img src="dndicons/barbarian.jpg"><input type="radio" id="Barbarian" name="race"
               value="Bike">Barbarian</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Ranger" name="race" value="Bike">Ranger</label><br>
+          <label for="race"><img src="dndicons/ranger.jpg"><input type="radio" id="Ranger" name="race" value="Bike">Ranger</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Rogue" name="race" value="Bike">Rogue</label><br>
+          <label for="race"><img src="dndicons/rogue.jpg"><input type="radio" id="Rogue" name="race" value="Bike">Rogue</label><br>
         </div>
 
         <div class="box2">
           <h3>Magia</h3>
 
-          <label for="class"><img src=""><input type="radio" id="Wizard" name="class" value="Bike"> Humano</label><br>
+          <label for="class"><img src="dndicons/wizard.jpg"><input type="radio" id="Wizard" name="class" value="Bike">Wizard</label><br>
 
-          <label for="class"><img src=""><input type="radio" id="Warlock" name="race" value="Bike"> Anão</label><br>
+          <label for="class"><img src="dndicons/warlock.jpg"><input type="radio" id="Warlock" name="race" value="Bike">Warlock</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Sorcerer" name="race" value="Bike">Halfling</label><br>
+          <label for="race"><img src="dndicons/sorcerer.jpg"><input type="radio" id="Sorcerer" name="race" value="Bike">Sorcerer</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Bard" name="race" value="Bike">Gnomo</label><br>
+          <label for="race"><img src="dndicons/bard.jpg"><input type="radio" id="Bard" name="race" value="Bike">Bard</label><br>
         </div>
 
         <div class="box2">
           <h3>Divino</h3>
 
-          <label for="class"><img src=""><input type="radio" id="Cleric" name="class" value="Bike"> Humano</label><br>
+          <label for="class"><img src="dndicons/cleric.jpg"><input type="radio" id="Cleric" name="class" value="Bike"> Cleric</label><br>
 
-          <label for="class"><img src=""><input type="radio" id="Druid" name="race" value="Bike"> Anão</label><br>
+          <label for="class"><img src="dndicons/druid.jpg"><input type="radio" id="Druid" name="race" value="Bike">Druid</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Monk" name="race" value="Bike">Halfling</label><br>
+          <label for="race"><img src="dndicons/monk.jpg"><input type="radio" id="Monk" name="race" value="Bike">Monk</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Paladin" name="race" value="Bike">Gnomo</label><br>
+          <label for="race"><img src="dndicons/paladin.jpg"><input type="radio" id="Paladin" name="race" value="Bike">Paladin</label><br>
 
         </div>
       </form>
@@ -128,7 +128,7 @@
 
 
 
-    <div class="box" class="column">
+    <div class="box" class="column" style="margin:auto; width: 50%;">
       <form style>
         <div class="box2">
           <h3>Atributos</h3>
@@ -149,28 +149,26 @@
         <div class="box2">
           <h3>Background</h3>
 
-          <label for="class"><img src=""><input type="radio" id="Wizard" name="class" value="Bike"> Acólito</label><br>
+          <label for="class"><input type="radio" id="Wizard" name="class" value="Bike"> Acólito</label><br>
 
-          <label for="class"><img src=""><input type="radio" id="Warlock" name="race" value="Bike">Criminoso</label><br>
+          <label for="class"><input type="radio" id="Warlock" name="race" value="Bike">Criminoso</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Sorcerer" name="race" value="Bike">Herói
+          <label for="race"><input type="radio" id="Sorcerer" name="race" value="Bike">Herói
             Local</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Bard" name="race" value="Bike">Artesão</label><br>
+          <label for="race"><input type="radio" id="Bard" name="race" value="Bike">Artesão</label><br>
 
-          <label for="class"><img src=""><input type="radio" id="Wizard" name="class" value="Bike"> Nobre</label><br>
+          <label for="class"> <input type="radio" id="Wizard" name="class" value="Bike"> Nobre</label><br>
 
-          <label for="class"><img src=""><input type="radio" id="Warlock" name="race" value="Bike">Hermitão</label><br>
+          <label for="class"> <input type="radio" id="Warlock" name="race" value="Bike">Hermitão</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Sorcerer" name="race"
-              value="Bike">Forasteiro</label><br>
+          <label for="race"> <input type="radio" id="Sorcerer" name="race" value="Bike">Forasteiro</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Bard" name="race" value="Bike">Soldado</label><br>
+          <label for="race"> <input type="radio" id="Bard" name="race" value="Bike">Soldado</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Sorcerer" name="race"
-              value="Bike">Marinheiro</label><br>
+          <label for="race"> <input type="radio" id="Sorcerer" name="race" value="Bike">Marinheiro</label><br>
 
-          <label for="race"><img src=""><input type="radio" id="Bard" name="race" value="Bike">Sábio</label><br>
+          <label for="race"> <input type="radio" id="Bard" name="race" value="Bike">Sábio</label><br>
 
         </div>
 
@@ -198,15 +196,15 @@
     </form>
   </div>
 
-  <div>
-  <label for="race" style="width: 30%; height: 5em"><textarea id="t" name="t" rows="10"
-      cols="50">Background do Personagem</textarea></label><br>
+  <div style="display: flex; margin:auto;  width: 50%;">
+    <label for="race" style="margin: 10px"><textarea id="t" name="t" rows="10"
+        cols="50">Background do Personagem</textarea></label><br>
 
-  <label for="race" style="width: 30%; height: 5em"><textarea id="t" name="t" rows="10"
-      cols="50">Visual do Personagem</textarea></label><br>
-<div>
+    <label for="race" style="margin: 10px;"><textarea id="t" name="t" rows="10"
+        cols="50">Visual do Personagem</textarea></label><br>
+    <div>
 
-  </div>
+    </div>
   </div>
 
   <div class="bot"></div>
